objects/Attendees__c.object
<CustomObject>
    <fields>
        <fullName>Company_Name__c</fullName>
        <description>Name of attendee company.</description>
        <inlineHelpText>This is the current company of the attendee.</inlineHelpText>
        <label>Company Name</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>Valid Email Address.</description>
        <inlineHelpText>This email will be use to contact the attendee.</inlineHelpText>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Location_Address_Book__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This must be a valid address or location.</description>
        <inlineHelpText>This must be a valid address or location.</inlineHelpText>
        <label>Location</label>
        <referenceTo>Location__c</referenceTo>
        <relationshipLabel>Attendees</relationshipLabel>
        <relationshipName>Attendees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <description>Valid phone number</description>
        <inlineHelpText>This phone number will be use to contact the attendee.</inlineHelpText>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <label>Attendee</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Attendee Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Attendees</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>